Исправить рекомендации по получению списка событий 3